# rezasm

./: .eslintrc.json  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.js  vite.config.js.timestamp-1696011471384-4cb2a6f4990a2.mjs
.github/ISSUE_TEMPLATE/: feature_request.md
cfg/: ezasm.pest
example/: arith_modified.ez  arithmatic_fib.txt  arithmetic_fib.ez  divie_by_zero.ez  fibonacci_jump.ez  hello_world.ez  import_1.ez  import_2.ez  print_sample.ez  terminal.ez
example/example_dir/: print_sample.ez
example/import/: import_1.ez
ezasm-core/: Cargo.toml
ezasm-core/src/: error.rs  lib.rs
ezasm-core/src/instructions/: instruction.rs  instruction_field.rs  instruction_registry.rs  mod.rs
ezasm-core/src/instructions/targets/: input_output_target.rs  input_target.rs  output_target.rs
ezasm-core/src/parser/: lexer.rs  line.rs
ezasm-core/src/simulation/: registry.rs  simulator.rs
ezasm-core/src/util/: error.rs  mod.rs
ezasm-macro/: Cargo.toml
ezasm-macro/src/: lib.rs
poster/: EzASM Poster Outline.docx  EzASM Poster.pptx
rezasm-app/: Cargo.toml
rezasm-app/rezasm-cli/: Cargo.toml
rezasm-app/rezasm-cli/src/: main.rs
rezasm-app/rezasm-cli/src/util/: application.rs  cli_arguments.rs  cli_io.rs  mod.rs
rezasm-app/rezasm-core/: Cargo.toml
rezasm-app/rezasm-core/src/instructions/: argument_type.rs  instruction_field.rs  instruction_registry.rs  mod.rs
rezasm-app/rezasm-core/src/instructions/targets/: input_output_target.rs  mod.rs  output_target.rs
rezasm-app/rezasm-core/src/parser/: lexer.rs  line.rs
rezasm-app/rezasm-core/src/simulation/: memory.rs  mod.rs  registry.rs  simulator.rs
rezasm-app/rezasm-core/src/util/: error.rs  raw_data.rs
rezasm-app/rezasm-macro/: Cargo.toml
rezasm-app/rezasm-macro/src/: lib.rs
rezasm-app/rezasm-tauri/: Cargo.toml  tauri.conf.json
rezasm-app/rezasm-tauri/src/: file_system.rs  gui_writer.rs  main.rs  menu.rs  tauri_reader.rs  tauri_writer.rs
rezasm-app/rezasm-wasm/: Cargo.toml
rezasm-app/rezasm-wasm/src/: file_system.rs  lib.rs  wasm_writer.rs
rezasm-app/rezasm-web-core/: Cargo.toml
rezasm-app/rezasm-web-core/src/util/: commands.rs  mod.rs  runtime.rs
rezasm-app/src/: lib.rs  main.rs
rezasm-app/src/instructions/implementation/: arithmetic_instructions.rs  mod.rs
rezasm-app/src/util/: application.rs  cli_arguments.rs
rezasm-core/: Cargo.toml
rezasm-core/src/: lib.rs
rezasm-core/src/instructions/: argument_type.rs  instruction.rs  instruction_field.rs  instruction_registry.rs
rezasm-core/src/instructions/targets/: output_target.rs
rezasm-core/src/parser/: lexer.rs  line.rs
rezasm-core/src/simulation/: memory.rs  simulator.rs
rezasm-core/src/util/: error.rs
rezasm-macro/: Cargo.toml
rezasm-source/rezasm-core/: Cargo.toml
rezasm-source/rezasm-core/src/: lib.rs
rezasm-source/rezasm-core/src/instructions/: argument_type.rs  instruction.rs  instruction_field.rs  instruction_registry.rs  mod.rs
rezasm-source/rezasm-core/src/instructions/implementation/: arithmetic_instructions.rs  branch_instructions.rs  comparison_instructions.rs  float_arithmetic_instructions.rs  function_instructions.rs  import_instructions.rs  memory_instructions.rs  mod.rs  terminal_input_instructions.rs  terminal_instructions.rs  terminal_output_instructions.rs
rezasm-source/rezasm-core/src/instructions/targets/: input_output_target.rs  input_target.rs  output_target.rs
rezasm-source/rezasm-core/src/parser/: lexer.rs  line.rs
rezasm-source/rezasm-core/src/simulation/: memory.rs  mod.rs  program.rs  reader.rs  reader_cell.rs  register.rs  registry.rs  simulator.rs  stream.rs  writer.rs
rezasm-source/rezasm-core/src/simulation/transform/: mod.rs  transformable.rs  transformation.rs  (+1 more)
rezasm-source/rezasm-core/src/test_utils/: mod.rs  workspace_root.rs  writer.rs
rezasm-source/rezasm-core/src/util/: as_any.rs  cli_io.rs  error.rs  io.rs  mod.rs  raw_data.rs  walk_chars.rs  word_size.rs  writer.rs
rezasm-source/rezasm-instructions/: Cargo.toml
rezasm-source/rezasm-instructions/src/: lib.rs
rezasm-source/rezasm-instructions/src/instructions/: arithmetic_instructions.rs
rezasm-source/rezasm-macro/: Cargo.toml
rezasm-source/rezasm-macro/src/: lib.rs
rezasm-source/rezasm-web-core/: Cargo.toml
rezasm-source/rezasm-web-core/src/: lib.rs
rezasm-source/rezasm-web-core/src/util/: commands.rs  mod.rs
rezasm-web/: main.rs
rezasm-web/util/: mod.rs  runtime.rs  serial_result.rs
src/: App.css  App.jsx  App.tsx  RustFunctions.js  error.rs  file_system.ts  fsContext.ts  fsShared.ts  globals.d.ts  main.jsx  main.rs  projectData.ts  rust_functions.js  rust_functions.ts  styles.css  tauri_file_system.ts  wasmFs.ts  window.d.ts  worker.js  worker.ts
src-web/: main.rs
src/components/: BrowserMenu.tsx  Code.jsx  Code.tsx  CodeArea.jsx  Console.jsx  Controls.jsx  Editor.jsx  FilesystemModals.tsx  FilesystemSidebar.tsx  FsActionsProvider.tsx  FsContextProvider.tsx  Home.jsx  MemoryView.jsx  RegisterView.jsx  RegistryView.jsx  Tabs.jsx  Toolbar.jsx  simulator.js  simulator.ts
src/components/code/: Code.jsx  Console.jsx  MemoryView.jsx  RegistryView.jsx  simulator.js
src/components/downloads/: Downloads.jsx
src/components/home/: Home.jsx
src/instructions/: argument_type.rs  instruction.rs  instruction_field.rs  instruction_registry.rs  mod.rs
src/instructions/implementation/: arithmetic_instructions.rs  mod.rs
src/instructions/targets/: input_output_target.rs  input_target.rs  mod.rs  output_target.rs
src/parser/: ezasm.grammar  highlight.js  lexer.rs  line.rs  meta_parser.js  mod.rs  parser.js  parser.terms.js  parsertest.js  parsertest.terms.js  test_grammar.js  test_grammar.terms.js
src/simulation/: memory.rs  mod.rs  register.rs  registry.rs  simulator.rs
src/simulator/: memory.rs  mod.rs  register.rs  registry.rs
src/util/: application.rs  cli.rs  cli_arguments.rs  mod.rs  raw_data.rs  word_size.rs
tests/: core.rs
tests/common/: reader.rs  writer.rs
