[package]
name = "rezasm"
version = "0.2.0"
edition = "2021"

[[bin]]
path = "rezasm-app/rezasm-cli/src/main.rs"
name = "rezasm-cli"

[[bin]]
path = "rezasm-app/rezasm-tauri/src/main.rs"
name = "rezasm-tauri"

[lib]
path = "rezasm-app/rezasm-wasm/src/lib.rs"
name = "rezasm_wasm"


[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }
wasm-pack = "0.12.1"

[dependencies]
rezasm-core = { path = "rezasm-source/rezasm-core" }
rezasm-instructions = { path = "rezasm-source/rezasm-instructions" }
rezasm-macro = { path = "rezasm-source/rezasm-macro" }
rezasm-web-core = { path = "rezasm-app/rezasm-web-core" }

rezasm-cli = { path = "rezasm-app/rezasm-cli" }
rezasm-tauri = { path = "rezasm-app/rezasm-tauri" }
rezasm-wasm = { path = "rezasm-app/rezasm-wasm" }

bimap = "0.6.3"
bytebuffer = "2.1.1"
clap = { version = "4.4.1", features = ["derive"] }
expanduser = "1.2.2"
js-sys = "0.3.64"
lazy_static = "1.4.0"
regex = "1.8.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["sync", "rt"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Window", "console"] }

[workspace]
members = ["rezasm-app/rezasm-tauri", "rezasm-app/rezasm-wasm", "rezasm-app/rezasm-web-core", "rezasm-source/rezasm-core", "rezasm-source/rezasm-instructions", "rezasm-source/rezasm-macro"]
