[package]
name = "rezasm"
version = "0.4.0"
authors = ["Trevor Brunette <trevorbrunette@gmail.com>"]
edition = "2021"
description = "An assembly-like programming language for use in education"
readme = "README.md"
homepage = "https://github.com/ezasm-org/rezasm"
repository = "https://github.com/ezasm-org/rezasm"
license = "MIT"
keywords = ["assembly", "asm", "ezasm", "rezasm", "rcos"]
categories = ["development-tools", "parser-implementations", "parsing", "simulation", "text-editors"]

[[bin]]
path = "rezasm-app/rezasm-cli/src/main.rs"
name = "rezasm-cli"
test = false


[build-dependencies]
cargo-watch = "8.4.1"
tauri-build = { version = "1.4.0", features = [] }
wasm-pack = "0.12.1"

[dependencies]
rezasm-core = { path = "rezasm-source/rezasm-core" }
rezasm-web-core = { path = "rezasm-source/rezasm-web-core" }

rezasm-cli = { path = "rezasm-app/rezasm-cli" }
rezasm-tauri = { path = "rezasm-app/rezasm-tauri" }
rezasm-wasm = { path = "rezasm-app/rezasm-wasm" }

bimap = "0.6.3"
bytebuffer = "2.1.1"
clap = { version = "4.4.1", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.8.4"
scanner-rust = "2.0.16"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde-wasm-bindgen = "0.6.1"
tauri-cli = "1.4.0"
thiserror = "1.0.47"
wasm-bindgen = "0.2.87"
web-sys = "0.3.65"

[workspace]
members = [
    "rezasm-app/rezasm-cli",
    "rezasm-app/rezasm-tauri",
    "rezasm-app/rezasm-wasm",
    "rezasm-source/rezasm-core",
    "rezasm-source/rezasm-web-core",
]
